# example-project

./: .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: python-package-wheel.yml  run-unit-test-and-build-wheel.yml
docs/: api.rst  conf.py  index.rst
docs/_templates/: sidebar.html
scripts/: update_pyproject_version.sh
tests/: test_app_container.py  test_pleno_common.py
